--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -168,26 +168,10 @@
 
   @include vp-767 {
     width: 100%;
-    height: 75vw;
+    min-height: 75vw;
+    height: auto;
     padding: 52px 27px 0 0;
   }
-
-  /*@include vp-1239 {
-    width: 27.22vw;
-    min-height: 29.17vw;
-  }
-
-  @include vp-1199 {
-    width: 42.19vw;
-    min-height: 54.69vw;
-    padding: 285px 41px 20px 20px;
-  }
-
-  @include vp-767 {
-    width: 100%;
-    min-height: 125vw;
-    padding: 271px 10px 18px 10px;
-  } */
 }
 
 .news__slide--big {
@@ -202,13 +186,7 @@
   @include vp-767 {
     width: 100%;
     height: 103.125vw;
-  }
-}
-
-.news__slide:nth-child(4n + 1),
-.news__slide:nth-child(5n + 1) {
-  @include vp-767 {
-    height: 103.125vw;
+    padding: 124px 26px 0 0;
   }
 }
 
@@ -238,21 +216,6 @@
   object-fit: cover;
   max-width: none;
   border-radius: 12px;
-
-  /*@include vp-1239 {
-    width: 30.55vw;
-    min-height: 33.22vw;
-  }
-
-  @include vp-1199 {
-    width: 100%;
-    min-height: 100%;
-  }
-
-  @include vp-767 {
-    width: 100%;
-    min-height: 128.75vw;
-  }*/
 }
 
 .news__text {
@@ -373,7 +336,7 @@
     margin-left: -1px;
 
     &::before {
-
+      bottom: 0;
       right: -15px;
     }
   }
@@ -392,6 +355,11 @@
   @include vp-1199 {
     width: 85.7%;
     padding: 5px 10px 2px 0;
+  }
+
+  @include vp-767 {
+    width: 76.7%;
+    padding: 10px 10px 5px 1px;
   }
 }
 
@@ -464,13 +432,17 @@
       right: -16px;
     }
   }
-}
 
-/* .news__slide:first-child .news__info {
-  width: 70%;
-  padding: 0 19px 8px 1px;
-  gap: 10px;
-}*/
+  @include vp-767 {
+    padding: 13px 11px 10px 1px;
+    gap: 22px;
+
+    &::before {
+      bottom: 0;
+      right: -15px;
+    }
+  }
+}
 
 .news__info p {
   font-size: 14px;
@@ -539,11 +511,6 @@
   @include vp-1199 {
     margin: 0 0 0 1px;
   }
-
-/*
-  @include vp-767 {
-    margin-top: 10px;
-  } */
 }
 
 .news__slide--big .news__slide-link {
@@ -553,10 +520,6 @@
     margin: 0 0 0 1px;
   }
 }
-
-/* .news__slide:first-child .news__slide-link {
-  margin-top: 10px;
-} */
 
 .news__nav {
   display: flex;
@@ -597,6 +560,14 @@
     color: $color-default-white;
     background-color: $color-endeavour;
   }
+
+  @include vp-767 {
+    width: 26px;
+    height: 26px;
+    font-size: 14px;
+    line-height: 14px;
+  }
+
 }
 
 .news__bullet--active {
@@ -660,6 +631,10 @@
     svg {
       color: $color-mischka;
     }
+  }
+
+  @include vp-767 {
+    margin-top: 3px;
   }
 }
 
